--- a/package.json
+++ b/package.json
@@ -5,28 +5,60 @@
   "author": "Nervos Core Dev <dev@nervos.org>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "start": "npm run dev",
+    "dev": "webpack-dev-server --hot --config ./config/webpack.config.dev.js",
+    "build": "rimraf dist && webpack --progress --config ./config/webpack.config.prod.js",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "dependencies": {
-    "lodash": "^4.17.5",
-    "simple-jsonrpc-js": "0.0.10",
-    "vue": "^2.1.0",
+    "lodash": "^4.17.11",
+    "simple-jsonrpc-js": "^0.0.10",
+    "vue": "^2.5.17",
     "vue-json-editor": "^1.2.3",
-    "vue-moment": "^3.2.0",
-    "vue-router": "^3.0.1"
+    "vue-moment": "^4.0.0",
+    "vue-router": "^3.0.2"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "cross-env": "^3.0.0",
-    "css-loader": "^0.26.4",
-    "file-loader": "^0.9.0",
-    "style-loader": "^0.20.3",
-    "vue-loader": "^10.0.0",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-import": "^0.13.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-node": "^7.0.0-beta.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.0.0-beta.5",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.2.0",
+    "lint-staged": "^8.1.0",
+    "node-sass": "^4.10.0",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.15.2",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.1.0",
-    "webpack": "^2.2.0-rc.2",
-    "webpack-dev-server": "^2.2.0-rc.0"
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-html-plugin": "^0.1.1",
+    "webpack-merge": "^4.1.4"
   }
 }
