--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .DS_Store
-node_modules/
-dist/
-npm-debug.log
-*.log
 .vscode
-yarn.lock
+
+# web
+/web/node_modules/
+/web/dist/
+/web/npm-debug.log
+/web/*.log
+/web/yarn.lock
