--- a/web/package.json
+++ b/web/package.json
@@ -10,13 +10,14 @@
     "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.12",
+    "history": "^4.7.2",
+    "husky": "^1.3.1",
     "react": "^16.8.4",
+    "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
-    "styled-components": "^4.1.3",
-    "history": "^4.7.2",
-    "react-app-rewired": "^2.1.0",
     "react-scripts": "2.1.8",
+    "styled-components": "^4.1.3",
     "typescript": "3.3.3333"
   },
   "devDependencies": {
@@ -37,7 +38,8 @@
     "lint": "eslint src/**/*.{js,jsx,ts,tsx} --fix",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "precommit": "lint-staged"
   },
   "eslintConfig": {
     "extends": "react-app"
