Server Initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,29 @@
 .DS_Store
 .vscode
 
+# server
+# Ignore bundler config.
+/server/.bundle
+/server/.env.local
+/server/.env.test
+
+# Ignore all logfiles and tempfiles.
+/server/log/*
+/server/tmp/*
+!/server/log/.keep
+!/server/tmp/.keep
+
+# Ignore uploaded files in development
+/server/storage/*
+!/server/storage/.keep
+
+/server/.byebug_history
+/server/config/database.yml
+
+# Ignore master key for decrypting credentials and more.
+/server/config/master.key
+/server/.vscode/*
+
 # web
 /web/node_modules/
 /web/build/
