--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "styled-components": "^4.1.3",
-    "typescript": "3.3.3333"
+    "typescript": "3.3.3333",
+    "react-json-view": "1.19.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "1.4.0",
