--- a/web/package.json
+++ b/web/package.json
@@ -15,11 +15,13 @@
     "react": "^16.8.4",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.4",
+    "react-json-view": "1.19.1",
+    "react-pager": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "styled-components": "^4.1.3",
     "typescript": "3.3.3333",
-    "react-json-view": "1.19.1"
+    "rc-pagination": "^1.17.11"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "1.4.0",
