--- a/server/Gemfile
+++ b/server/Gemfile
@@ -26,14 +26,28 @@ gem 'puma', '~> 3.11'
 gem 'bootsnap', '>= 1.1.0', require: false
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
-# gem 'rack-cors'
+gem "rack-cors", require: "rack/cors"
 
 # config ENV by dotenv
 gem 'dotenv-rails'
 
+# daemons
+gem 'daemons', '~> 1.2', '>= 1.2.6'
+
+# CKB SDK
+gem "ckb-sdk-ruby", git: "https://github.com/nervosnetwork/ckb-sdk-ruby.git", require: "ckb"
+
+# Redis
+gem 'hiredis', '~> 0.6.1'
+gem 'redis', '~> 4.0', '>= 4.0.3'
+
+# Sidekiq
+gem 'sidekiq', '~> 5.2', '>= 5.2.3'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
-  gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem "pry"
+  gem "pry-nav"
 end
 
 group :development do
@@ -41,6 +55,9 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+  gem 'rubocop', require: false
+  gem 'awesome_print'
+  gem "annotate"
 end
 
 
