chore(server): add configs

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,6 @@
 DB_USERNAME="postgres"
 DB_PASSWORD="postgres"
 CKB_NODE_URL="http://localhost:3333"
+REDIS_URL=redis://localhost:6379/x
+SIDEKIQ_USERNAME="xxx"
+SIDEKIQ_PASSWORD="yyy"
