--- a/server/Gemfile
+++ b/server/Gemfile
@@ -35,7 +35,7 @@ gem 'dotenv-rails'
 gem 'daemons', '~> 1.2', '>= 1.2.6'
 
 # CKB SDK
-gem "ckb-sdk-ruby", git: "https://github.com/nervosnetwork/ckb-sdk-ruby.git", require: "ckb"
+gem "ckb-sdk-ruby", git: "https://github.com/nervosnetwork/ckb-sdk-ruby.git", require: "ckb", branch: "develop"
 
 # Redis
 gem 'hiredis', '~> 0.6.1'
