--- a/server/test/fixtures/sync_infos.yml
+++ b/server/test/fixtures/sync_infos.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: inauthentic_tip_block_number
   value: 1
 
 two:
-  name: MyString
+  name: authentic_tip_block_number
   value: 1
