chore(server): use rubocop  format code

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -1,14 +1,14 @@
-source 'https://rubygems.org'
+source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby '2.5.3'
+ruby "2.5.3"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '~> 5.2.2', '>= 5.2.2.1'
+gem "rails", "~> 5.2.2", ">= 5.2.2.1"
 # Use postgresql as the database for Active Record
-gem 'pg', '>= 0.18', '< 2.0'
+gem "pg", ">= 0.18", "< 2.0"
 # Use Puma as the app server
-gem 'puma', '~> 3.11'
+gem "puma", "~> 3.11"
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.5'
 # Use Redis adapter to run Action Cable in production
@@ -23,29 +23,29 @@ gem 'puma', '~> 3.11'
 # gem 'capistrano-rails', group: :development
 
 # Reduces boot times through caching; required in config/boot.rb
-gem 'bootsnap', '>= 1.1.0', require: false
+gem "bootsnap", ">= 1.1.0", require: false
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 gem "rack-cors", require: "rack/cors"
 
 # config ENV by dotenv
-gem 'dotenv-rails'
+gem "dotenv-rails"
 
 # daemons
-gem 'daemons', '~> 1.2', '>= 1.2.6'
+gem "daemons", "~> 1.2", ">= 1.2.6"
 
 # CKB SDK
 gem "ckb-sdk-ruby", git: "https://github.com/nervosnetwork/ckb-sdk-ruby.git", require: "ckb", branch: "develop"
 
 # Redis
-gem 'hiredis', '~> 0.6.1'
-gem 'redis', '~> 4.0', '>= 4.0.3'
+gem "hiredis", "~> 0.6.1"
+gem "redis", "~> 4.0", ">= 4.0.3"
 
 # Sidekiq
-gem 'sidekiq', '~> 5.2', '>= 5.2.3'
+gem "sidekiq", "~> 5.2", ">= 5.2.3"
 
 # bulk insertion of data into database using ActiveRecord
-gem 'activerecord-import'
+gem "activerecord-import"
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
@@ -54,15 +54,14 @@ group :development, :test do
 end
 
 group :development do
-  gem 'listen', '>= 3.0.5', '< 3.2'
+  gem "listen", ">= 3.0.5", "< 3.2"
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
-  gem 'spring'
-  gem 'spring-watcher-listen', '~> 2.0.0'
-  gem 'rubocop', require: false
-  gem 'awesome_print'
+  gem "spring"
+  gem "spring-watcher-listen", "~> 2.0.0"
+  gem "rubocop", require: false
+  gem "awesome_print"
   gem "annotate"
 end
 
-
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
-gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+gem "tzinfo-data", platforms: [:mingw, :mswin, :x64_mingw, :jruby]
