--- a/server/Gemfile
+++ b/server/Gemfile
@@ -53,6 +53,16 @@ group :development, :test do
   gem "pry-nav"
 end
 
+group :test do
+  gem "simplecov", require: false
+  gem "minitest-reporters"
+  gem "shoulda-context"
+  gem "shoulda-matchers"
+  gem "vcr"
+  gem "webmock"
+  gem "database_cleaner"
+end
+
 group :development do
   gem "listen", ">= 3.0.5", "< 3.2"
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
