--- a/web/package.json
+++ b/web/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "lint": "eslint src/**/*.{ts,tsx} --fix",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx} --fix",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
