--- a/server/test/fixtures/uncle_blocks.yml
+++ b/server/test/fixtures/uncle_blocks.yml
@@ -1,7 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  cellbase_id:
   difficulty:
   block_hash:
   number: 1
@@ -14,12 +13,10 @@ one:
   version: 1
   proposal_transactions:
   proposal_transactions_count: 1
-  miner_hash:
-  reward: 1
   block: one
+  witnesses_root:
 
 two:
-  cellbase_id:
   difficulty:
   block_hash:
   number: 1
@@ -32,6 +29,5 @@ two:
   version: 1
   proposal_transactions:
   proposal_transactions_count: 1
-  miner_hash:
-  reward: 1
   block: two
+  witnesses_root:
