--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "2.1.8",
     "styled-components": "^4.1.3",
     "typescript": "3.3.3333",
+    "axios": "^0.18.0",
     "rc-pagination": "^1.17.11"
   },
   "devDependencies": {
