chore(server): use environment variables

--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,6 @@ SIDEKIQ_PASSWORD="yyy"
 DEFAULT_HASH_LENGTH="64"
 DEFAULT_SHORT_HASH_LENGTH="10"
 DEFAULT_HASH_PREFIX="0x"
+BLOCK_SAFETY_INTERVAL="10"
+AUTHENTICSYNC_LOOP_INTERVAL = "10"
+INAUTHENTICSYNC_LOOP_INTERVAL = "1"
