--- a/server/Gemfile
+++ b/server/Gemfile
@@ -47,6 +47,8 @@ gem "sidekiq", "~> 5.2", ">= 5.2.3"
 # bulk insertion of data into database using ActiveRecord
 gem "activerecord-import"
 
+gem 'fast_jsonapi'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem "pry"
