--- a/server/Gemfile
+++ b/server/Gemfile
@@ -49,7 +49,7 @@ gem "activerecord-import"
 
 gem "fast_jsonapi"
 
-gem 'kaminari'
+gem "kaminari"
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
