chore(server): add kaminari gem

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -49,6 +49,8 @@ gem "activerecord-import"
 
 gem "fast_jsonapi"
 
+gem 'kaminari'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem "pry"
