--- a/server/.env.example
+++ b/server/.env.example
@@ -6,5 +6,9 @@ REDIS_URL=redis://localhost:6379/1
 SIDEKIQ_USERNAME="xxx"
 SIDEKIQ_PASSWORD="yyy"
 DEFAULT_HASH_LENGTH="64"
+DEFAULT_WITH_PREFIX_HASH_LENGTH="66"
 DEFAULT_SHORT_HASH_LENGTH="10"
 DEFAULT_HASH_PREFIX="0x"
+BLOCK_SAFETY_INTERVAL="10"
+AUTHENTICSYNC_LOOP_INTERVAL = "10"
+INAUTHENTICSYNC_LOOP_INTERVAL = "1"
