--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,8 @@
     "styled-components": "^4.1.3",
     "typescript": "3.3.3333",
     "axios": "^0.18.0",
-    "rc-pagination": "^1.17.11"
+    "rc-pagination": "^1.17.11",
+    "ts-jest": "^24.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "1.4.0",
@@ -40,9 +41,22 @@
     "start": "react-app-rewired start",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "test": "jest",
     "eject": "react-app-rewired eject",
     "precommit": "lint-staged"
+  },
+  "jest": {
+    "displayName": "ckb-explorer",
+    "testRegex": "(/tests/.*.(test|spec))\\.(ts?|js?)$",
+    "transform": {
+      "^.+\\.ts?$": "ts-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json",
+      "node"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
