--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,8 @@
     "typescript": "3.3.3333",
     "axios": "^0.18.0",
     "rc-pagination": "^1.17.11",
-    "ts-jest": "^24.0.2"
+    "ts-jest": "^24.0.2",
+    "query-string": "6.4.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "1.4.0",
