--- a/server/Gemfile
+++ b/server/Gemfile
@@ -67,6 +67,7 @@ group :test do
   gem "database_cleaner"
   gem "mocha"
   gem "factory_bot_rails"
+  gem "faker", git: "https://github.com/stympy/faker.git", branch: "master"
 end
 
 group :development do
