chore(server): ignore tests on rubocop

--- a/server/.rubocop.yml
+++ b/server/.rubocop.yml
@@ -77,6 +77,14 @@ Metrics/BlockNesting:
 Metrics/ModuleLength:
   Max: 200
 
+Metrics/BlockLength:
+  CountComments: true
+  Max: 25
+  ExcludedMethods: []
+  Exclude:
+    - "test/**/*"
+    - "config/environments/**/*"
+
 Style/For:
   Enabled: false
 
