chore(server): add deploy gems and script

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -51,6 +51,12 @@ gem "fast_jsonapi"
 
 gem "kaminari"
 
+# Deployment
+gem 'mina', require: false
+gem 'mina-puma', require: false
+gem 'mina-multistage', require: false
+gem 'mina-sidekiq', '~> 1.0', '>= 1.0.3', require: false
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem "pry"
