--- a/server/config/redis.yml
+++ b/server/config/redis.yml
@@ -1,5 +1,5 @@
 defaults: &defaults
-  url: <%= ENV.fetch("REDIS_URL") || "redis://localhost:6379/8" %>
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/9" } %>
   password: <%= ENV["REDIS_PASSWORD"] %>
 
 development:
