--- a/server/Gemfile
+++ b/server/Gemfile
@@ -72,6 +72,7 @@ group :test do
   gem "mocha"
   gem "factory_bot_rails"
   gem "faker", git: "https://github.com/stympy/faker.git", branch: "master"
+  gem "codecov", require: false
 end
 
 group :development do
