--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue": "^2.5.17",
     "vue-json-editor": "^1.2.3",
     "vue-moment": "^4.0.0",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "tar": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
