feat(server): add updater daemon

--- a/server/.env.example
+++ b/server/.env.example
@@ -12,3 +12,4 @@ DEFAULT_HASH_PREFIX="0x"
 BLOCK_SAFETY_INTERVAL="10"
 AUTHENTICSYNC_LOOP_INTERVAL = "10"
 INAUTHENTICSYNC_LOOP_INTERVAL = "1"
+TRANSACTION_UPDATER_LOOP_INTERVAL = "30"
