chore(server): use redis on ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ jobs:
     - language: ruby
       services:
         - postgresql
+        - redis-server
       addons:
         postgresql: "10"
       rvm:
