perf(server): use worker args consumer and producer to generate workers

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -55,6 +55,8 @@ gem "fast_jsonapi"
 
 gem "kaminari"
 
+gem "concurrent-ruby", require: "concurrent"
+
 # Deployment
 gem "mina", require: false
 gem "mina-multistage", require: false
