chore(server): format code

--- a/server/.rubocop.yml
+++ b/server/.rubocop.yml
@@ -38,7 +38,7 @@ Style/TrailingCommaInHashLiteral:
 Metrics/LineLength:
   Enabled: false
 
-Layout/IndentHash:
+Layout/IndentFirstHashElement:
   EnforcedStyle: consistent
 
 Style/BracesAroundHashParameters:
