feat(server): track sidekiq failure jobs

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -47,6 +47,7 @@ gem "redis", "~> 4.0", ">= 4.0.3"
 # Sidekiq
 gem "sidekiq", "~> 5.2", ">= 5.2.3"
 gem "sidekiq-unique-jobs"
+gem "sidekiq-failures"
 
 # bulk insertion of data into database using ActiveRecord
 gem "activerecord-import"
