--- a/web/package.json
+++ b/web/package.json
@@ -10,19 +10,20 @@
     "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.12",
+    "axios": "^0.18.0",
+    "env-cmd": "^9.0.1",
     "history": "^4.7.2",
     "husky": "^1.3.1",
+    "query-string": "6.4.2",
+    "rc-pagination": "^1.17.11",
     "react": "^16.8.4",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "styled-components": "^4.1.3",
-    "typescript": "3.3.3333",
-    "axios": "^0.18.0",
-    "rc-pagination": "^1.17.11",
     "ts-jest": "^24.0.2",
-    "query-string": "6.4.2"
+    "typescript": "3.3.3333"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "1.4.0",
@@ -38,9 +39,9 @@
     "prettier": "^1.16.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "env-cmd -f ./.env.develop react-app-rewired start",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
-    "build": "react-app-rewired build",
+    "build": "env-cmd -f ./.env.production react-app-rewired build",
     "test": "jest",
     "eject": "react-app-rewired eject",
     "precommit": "lint-staged"
