chore(server): change cell status and block address ids update way

--- a/server/config/sidekiq.yml
+++ b/server/config/sidekiq.yml
@@ -3,6 +3,7 @@
 :queues:
   - [inauthentic_sync, 4]
   - [address_info_updater, 4]
+  - [block_info_updater, 4]
   - [authentic_sync, 3]
   - [transaction_info_updater, 2]
   - [address_cell_consumed_updater, 1]
