feat(server): add newrelic

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -61,6 +61,7 @@ gem "concurrent-ruby", require: "concurrent"
 # Deployment
 gem "mina", require: false
 gem "mina-multistage", require: false
+gem "newrelic_rpm"
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
