feat(server): add maintenance mode

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -62,6 +62,7 @@ gem "concurrent-ruby", require: "concurrent"
 gem "mina", require: false
 gem "mina-multistage", require: false
 gem "newrelic_rpm"
+gem "turnout"
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
