--- a/package.json
+++ b/package.json
@@ -4,40 +4,40 @@
   "private": true,
   "dependencies": {
     "@cryptape/sdk-ts-config": "^0.0.1",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.11.0",
-    "@types/react": "16.8.7",
-    "@types/react-dom": "16.8.2",
+    "@types/jest": "24.0.15",
+    "@types/node": "12.0.10",
+    "@types/react": "16.8.22",
+    "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.12",
     "axios": "^0.18.1",
     "env-cmd": "^9.0.1",
     "history": "^4.7.2",
-    "husky": "^1.3.1",
-    "query-string": "6.4.2",
+    "husky": "^3.0.0",
+    "i18next": "17.0.6",
+    "query-string": "6.8.1",
     "rc-pagination": "^1.17.11",
     "react": "^16.8.4",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.4",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8",
-    "styled-components": "^4.1.3",
+    "react-i18next": "10.11.2",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.3.2",
     "ts-jest": "^24.0.2",
-    "typescript": "3.3.3333",
-    "i18next": "17.0.4",
-    "react-i18next": "10.11.2"
+    "typescript": "3.5.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "1.4.0",
-    "@typescript-eslint/parser": "1.4.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "@typescript-eslint/eslint-plugin": "1.11.0",
+    "@typescript-eslint/parser": "1.11.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "lint-staged": "^8.1.0",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "lint-staged": "^9.0.0",
     "prettier": "^1.16.0"
   },
   "scripts": {
