--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "noUnusedLocals": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
+    "sourceMap": true,
     "removeComments": true,
     "preserveConstEnums": true,
     "allowJs": false,
