--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.12",
     "axios": "^0.18.1",
+    "bizcharts": "^3.5.4",
     "env-cmd": "^9.0.1",
     "history": "^4.7.2",
     "husky": "^3.0.0",
