--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2",
     "ts-jest": "^24.0.2",
-    "typescript": "3.5.2"
+    "typescript": "3.5.2",
+    "uri-js": "^4.2.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "1.11.0",
