--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@cryptape/sdk-ts-config": "^0.0.1",
+    "@types/eslint": "^6.1.1",
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
@@ -14,6 +15,7 @@
     "bizcharts": "^3.5.4",
     "camelcase-keys": "^6.0.1",
     "env-cmd": "^9.0.1",
+    "eslint": "^6.2.2",
     "history": "^4.7.2",
     "husky": "^3.0.0",
     "i18next": "17.0.6",
@@ -27,6 +29,7 @@
     "styled-components": "^4.3.2",
     "ts-jest": "^24.0.2",
     "typescript": "3.5.2",
+    "typescript-eslint": "^0.0.1-alpha.0",
     "uri-js": "^4.2.2"
   },
   "devDependencies": {
