--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-dom": "^16.8.4",
     "react-i18next": "10.11.2",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.1.1",
     "styled-components": "^4.3.2",
     "ts-jest": "^24.0.2",
     "typescript": "3.5.2",
