--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.12",
     "axios": "^0.18.1",
+    "bignumber.js": "^9.0.0",
     "bizcharts": "^3.5.4",
     "camelcase-keys": "^6.0.1",
     "env-cmd": "^9.0.1",
