--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_API_URL = 'http://your-api-url'
-REACT_APP_CHAIN_TYPE = 'testnet'
-REACT_APP_CHAIN_NAME = 'testnet'
+REACT_APP_CHAIN_TYPE = 'mainnet'
+REACT_APP_CHAIN_NAME = ''
