--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.4",
     "react-i18next": "10.11.2",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.1.1",
     "styled-components": "^4.3.2",
