--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ckb-explorer",
+  "name": "ckb-explorer-fronted",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.12",
+    "antd": "^3.25.1",
     "axios": "^0.18.1",
     "bignumber.js": "^9.0.0",
     "bizcharts": "^3.5.4",
