feat: add time to address lock until

--- a/.env.develop
+++ b/.env.develop
@@ -1,4 +1,4 @@
 REACT_APP_API_URL = 'http://your-api-url'
-REACT_APP_CHAIN_TYPE = 'testnet'
+REACT_APP_CHAIN_TYPE = 'mainnet'
 REACT_APP_MAINNET_URL = 'http://localhost:3000'
 REACT_APP_TESTNET_NAME = 'testnet'
