--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "styled-components": "^4.3.2",
     "ts-jest": "^24.0.2",
     "typescript": "3.5.2",
-    "typescript-eslint": "^0.0.1-alpha.0",
-    "uri-js": "^4.2.2"
+    "typescript-eslint": "^0.0.1-alpha.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "1.11.0",
