--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@types/echarts": "4.4.3",
     "@types/eslint": "6.1.8",
-    "@types/jest": "25.1.3",
+    "@types/jest": "24.0.15",
     "@types/node": "13.7.4",
     "@types/react": "16.9.21",
     "@types/react-dom": "16.9.5",
@@ -32,7 +32,7 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
     "styled-components": "5.0.1",
-    "ts-jest": "25.2.1",
+    "ts-jest": "24.3.0",
     "typescript": "3.7.5",
     "typescript-eslint": "0.0.1-alpha.0"
   },
@@ -54,7 +54,8 @@
     "lint": "eslint src/**/*.{ts,tsx} --fix",
     "build": "env-cmd -f ./.env.production react-app-rewired build",
     "test": "jest",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "precommit": "lint-staged"
   },
   "jest": {
     "displayName": "ckb-explorer",
@@ -71,11 +72,6 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
