--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-app-rewired": "2.1.5",
     "react-dom": "16.12.0",
     "react-i18next": "11.3.3",
+    "react-outside-click-handler": "^1.3.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
