--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "13.7.4",
     "@types/react": "16.9.21",
     "@types/react-dom": "16.9.5",
+    "@types/react-outside-click-handler": "^1.3.0",
     "@types/react-router-dom": "5.1.3",
     "@types/styled-components": "4.4.3",
     "@typescript-eslint/parser": "2.20.0",
