--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "0.18.1",
     "bignumber.js": "9.0.0",
     "camelcase-keys": "6.2.1",
+    "create-react-app": "^3.4.1",
     "default-passive-events": "1.0.10",
     "echarts": "4.7.0",
     "echarts-for-react": "^2.0.15-beta.1",
@@ -24,7 +25,6 @@
     "i18next": "19.3.4",
     "query-string": "6.11.1",
     "react": "16.13.1",
-    "react-app-rewired": "2.1.5",
     "react-dom": "16.13.1",
     "react-i18next": "11.3.4",
     "react-outside-click-handler": "^1.3.0",
@@ -50,14 +50,14 @@
     "prettier": "1.19.1"
   },
   "scripts": {
-    "start": "env-cmd -f ./.env.develop react-app-rewired start",
+    "start": "env-cmd -f ./.env.develop react-scripts start",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
-    "build": "env-cmd -f ./.env.production react-app-rewired build",
+    "build": "env-cmd -f ./.env.production react-scripts build",
     "test": "jest",
-    "eject": "react-app-rewired eject"
+    "eject": "react-scripts eject"
   },
   "jest": {
-    "displayName": "ckb-explorer",
+    "displayName": "ckb-explorer-frontend",
     "testRegex": "(/tests/.*.(test|spec))\\.(ts?|js?)$",
     "transform": {
       "^.+\\.ts?$": "ts-jest"
