--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "i18next": "19.3.4",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
+    "jest-styled-components": "^7.0.2",
     "query-string": "6.12.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
