--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-scripts": "3.4.1",
     "react-test-renderer": "^16.13.1",
     "styled-components": "5.0.1",
+    "timezone-mock": "^1.0.18",
     "ts-jest": "25.4.0",
     "typescript": "3.8.3"
   },
