--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "antd": "4.16.9",
+    "antd": "4.16.10",
     "axios": "0.21.1",
     "bignumber.js": "9.0.1",
     "camelcase-keys": "7.0.0",
     "default-passive-events": "2.0.0",
-    "echarts": "5.1.2",
-    "echarts-for-react": "^3.0.1",
+    "echarts": "4.8.0",
+    "echarts-for-react": "^2.0.1",
     "env-cmd": "10.1.0",
     "history": "5.0.0",
     "i18next": "20.3.5",
@@ -36,8 +36,8 @@
     "@types/react-router-dom": "5.1.8",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "5.1.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "4.28.5",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "4.29.0",
     "create-react-app": "^4.0.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -54,7 +54,7 @@
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "jest-styled-components": "^7.0.5",
-    "mockdate": "^3.0.5",
+    "mockdate": "^2.0.5",
     "prettier": "2.3.2",
     "react-test-renderer": "^17.0.2",
     "stylelint": "^13.13.1",
@@ -83,6 +83,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "transform": {
+      "\\.ts$": "<rootDir>/node_modules/babel-jest"
+    },
   "browserslist": [
     ">0.2%",
     "not dead",
