--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "lint:css": "stylelint src/**/*.tsx",
     "build": "env-cmd -f ./.env.production react-scripts build",
     "test": "react-scripts test --watchAll=false",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "husky:init": "husky install"
   },
   "jest": {
     "displayName": "Unit & UI Test",
@@ -83,9 +84,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "transform": {
-      "\\.ts$": "<rootDir>/node_modules/babel-jest"
-    },
   "browserslist": [
     ">0.2%",
     "not dead",
