--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-outside-click-handler": "^1.3.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "4.0.3",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
@@ -67,19 +67,16 @@
     "typescript": "4.3.5"
   },
   "scripts": {
-    "start": "env-cmd -f ./.env.develop react-scripts start",
+    "start": "env-cmd -f ./.env.develop react-scripts start --openssl-legacy-provider start",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
     "lint:css": "stylelint src/**/*.tsx",
-    "build": "env-cmd -f ./.env.production react-scripts build",
+    "build": "env-cmd -f ./.env.production react-scripts build --openssl-legacy-provider start",
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "husky:init": "husky install"
   },
   "jest": {
-    "displayName": "Unit & UI Test",
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
+    "displayName": "Unit Test"
   },
   "eslintConfig": {
     "extends": "react-app"
