--- a/package.json
+++ b/package.json
@@ -69,10 +69,10 @@
     "typescript": "4.3.5"
   },
   "scripts": {
-    "start": "env-cmd -f ./.env.develop react-scripts start --openssl-legacy-provider start",
+    "start": "env-cmd --no-override -f ./.env.develop react-scripts start --openssl-legacy-provider start",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
     "lint:css": "stylelint src/**/*.tsx",
-    "build": "env-cmd -f ./.env.production react-scripts build --openssl-legacy-provider start",
+    "build": "env-cmd --no-override -f ./.env.production react-scripts build --openssl-legacy-provider start",
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "husky:init": "husky install"
