--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "echarts-for-react": "^2.0.1",
     "env-cmd": "10.1.0",
     "history": "5.0.0",
+    "http-proxy-middleware": "^2.0.4",
     "i18next": "20.3.5",
     "query-string": "7.0.1",
     "react": "17.0.2",
