--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "echarts-for-react": "^2.0.1",
     "env-cmd": "10.1.0",
     "history": "5.0.0",
+    "http-proxy-middleware": "^2.0.4",
     "i18next": "20.3.5",
     "query-string": "7.0.1",
     "react": "17.0.2",
@@ -21,6 +22,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.50.1",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
