--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "echarts-for-react": "^2.0.1",
     "env-cmd": "10.1.0",
     "history": "5.0.0",
-    "http-proxy-middleware": "^2.0.4",
     "i18next": "20.3.5",
     "query-string": "7.0.1",
     "react": "17.0.2",
@@ -52,6 +51,7 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "http-proxy-middleware": "2.0.4",
     "husky": "^7.0.1",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
