--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "sass": "1.50.1",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
