--- a/.github/workflows/auto_merge_request.yml
+++ b/.github/workflows/auto_merge_request.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           source_branch: 'develop'
           destination_branch: 'testnet'
-          pr_title: 'Merge develop ${{ github.ref }} into testnet'
+          pr_title: 'Merge develop into testnet'
           pr_reviewer: 'keith-cy'
           pr_label: 'auto-pr'
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -28,7 +28,7 @@ jobs:
         with:
           source_branch: 'testnet'
           destination_branch: 'master'
-          pr_title: 'Merge released ${{ github.ref }} into develop'
+          pr_title: 'Merge testnet into mainnet'
           pr_reviewer: 'keith-cy'
           pr_label: 'auto-pr'
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -43,7 +43,7 @@ jobs:
         with:
           source_branch: 'master'
           destination_branch: 'develop'
-          pr_title: 'Merge released ${{ github.ref }} into develop'
+          pr_title: 'Merge mainnet into develop'
           pr_reviewer: 'keith-cy'
           pr_label: 'auto-pr'
           github_token: ${{ secrets.GITHUB_TOKEN }}
