--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "0.21.4",
     "bignumber.js": "9.0.1",
     "camelcase-keys": "7.0.0",
+    "dayjs": "1.11.5",
     "default-passive-events": "2.0.0",
     "echarts": "4.8.0",
     "echarts-for-react": "^2.0.1",
