--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -18,5 +18,6 @@ jobs:
         with:
           # specify the `main` branch as the remote branch to push to
           branch: 'develop'
+          git_push_flags: '--force'
           git_remote_url: ${{ secrets.STAGING_HOST_URL }}
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
