feat: update google analytics
1. set ga id configurable
2. use template conditional expression to insert ga script

--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,5 @@ REACT_APP_API_URL=http://your-api-url
 REACT_APP_CHAIN_TYPE=mainnet
 REACT_APP_MAINNET_URL=http://localhost:3000
 REACT_APP_TESTNET_NAME=testnet
+
+REACT_APP_GA_ID= # google analytics id
