修改nginx配置文件，配置参数

--- a/front.conf
+++ b/front.conf
@@ -4,7 +4,7 @@ server
         server_name localhost;
 
         location / {
-            root /usr/share/nginx/html/build;
+            root /usr/share/nginx/html/;
             index index.html index.htm index.php;
             if ( !-e $request_filename ) {
                 rewrite ^/(.*)$ index.html last;
