--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Deploy to mainnet
 
 on: 
   push:
@@ -6,18 +6,12 @@ on:
       - master
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    uses: ./.github/workflows/_build_deploy.yml
+    with:
+      ckb-mode: mainnet
+      api-url: $MAINNET_API_URL
+      k8s-namespace: mainnet
+      k8s-workload: ckb-explorer-front
+    secrets: inherit
 
-    steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 0
 
-      - name: Push to dokku
-        uses: dokku/github-action@master
-        with:
-          # specify the `main` branch as the remote branch to push to
-          branch: 'main'
-          git_push_flags: '--force'
-          git_remote_url: ${{ secrets.MAINNET_HOST_URL }}
-          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
