--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "env-cmd": "10.1.0",
     "history": "5.0.0",
     "i18next": "20.3.5",
+    "jsbi": "3.2.5",
     "query-string": "7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
