fix github action syntax error

--- a/.github/workflows/_build_deploy.yml
+++ b/.github/workflows/_build_deploy.yml
@@ -25,6 +25,7 @@ on:
         required: true
       KUBOARD_API_URL:
         required: true
+jobs:                
   deploy:
     runs-on: ubuntu-latest
 
