--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -9,7 +9,7 @@ jobs:
     uses: ./.github/workflows/_build_deploy.yml
     with:
       ckb-mode: testnet
-      api-url: $TESTNET_API_URL
+      api-url: ${{secrets.TESTNET_API_URL}}
       k8s-namespace: testnet
       k8s-workload: ckb-explorer-front
     secrets: inherit
