--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -12,6 +12,7 @@ jobs:
       api-url: $MAINNET_API_URL
       k8s-namespace: mainnet
       k8s-workload: ckb-explorer-front
+      environment: mainnet
     secrets: inherit
 
 
