--- a/.github/workflows/_build_deploy.yml
+++ b/.github/workflows/_build_deploy.yml
@@ -5,15 +5,16 @@ on:
       ckb-mode:
         required: true
         type: string
-      api-url:
-        required: true
-        type: string
       k8s-namespace:
         required: true
         type: string
       k8s-workload:
         required: true
         type: string
+      environment:
+        required: false
+        type: string
+        default: staging
     secrets:
       GHCR_USERNAME:
         required: true
@@ -28,12 +29,11 @@ on:
 jobs:                
   deploy:
     runs-on: ubuntu-latest
-
+    environment: ${{ inputs.environment }}
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
       - name: Build and push
         id: docker_build
         uses: mr-smithers-excellent/docker-build-push@v5
@@ -41,7 +41,8 @@ jobs:
           image: ckb-explorer-frontend
           registry: ghcr.io
           githubOrg: magickbase # optional
-          buildArgs: "API_URL=${{ inputs.api-url }},CHAIN_TYPE=${{ inputs.ckb-mode }}"
+          buildArgs: "API_URL=${{ secrets.API_URL }},CHAIN_TYPE=${{ inputs.ckb-mode }}"
+          enableBuildKit: true
           username: ${{ secrets.GHCR_USERNAME }}
           password: ${{ secrets.GHCR_TOKEN }}
       - name: Update image on K8S
