--- a/front.conf
+++ b/front.conf
@@ -4,16 +4,13 @@ server
         server_name localhost;
 
         location / {
-            root /usr/share/nginx/html/;
-            index index.html index.htm index.php;
-            if ( !-e $request_filename ) {
-                rewrite ^/(.*)$ index.html last;
-            }
+            try_files $uri /index.html;
+            add_header Cache-Control "public, no-cache, must-revalidate";
         }
-        location ~ .*.(gif|jpg|jpeg|png|bmp|swf)$ {
-            expires 10d;
-        }
-        location ~ .*.(js|css)?$ {
-            expires 1h;
+
+        location /static {
+            expires 1y;
+            add_header Cache-Control "public";
+            access_log off;  
         }
     }
