--- a/front.conf
+++ b/front.conf
@@ -2,6 +2,7 @@ server
     {
         listen 80;
         server_name localhost;
+        root /usr/share/nginx/html/;
 
         location / {
             try_files $uri /index.html;
