--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "default-passive-events": "2.0.0",
     "echarts": "4.8.0",
     "echarts-for-react": "^2.0.1",
-    "env-cmd": "10.1.0",
     "history": "5.0.0",
     "i18next": "20.3.5",
     "jsbi": "3.2.5",
@@ -73,13 +72,14 @@
     "typescript": "4.3.5"
   },
   "scripts": {
-    "start": "env-cmd --no-override -f ./.env.develop react-app-rewired start",
+    "start": "react-app-rewired start",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
     "lint:css": "stylelint src/**/*.tsx",
-    "build": "env-cmd --no-override -f ./.env.production react-app-rewired build",
+    "build": "react-app-rewired build",
     "test": "react-app-rewired test --watchAll=false",
     "eject": "react-app-rewired eject",
-    "husky:init": "husky install"
+    "husky:init": "husky install",
+    "prepare": "node ./scripts/prepare.js"
   },
   "jest": {
     "displayName": "Unit Test"
